--- a/ReverseSwapArrayRotation/ReverseSwapArrayRotation.vcxproj.filters
+++ b/ReverseSwapArrayRotation/ReverseSwapArrayRotation.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SplitArrayRotation.c">
+    <ClCompile Include="ReverseSwapArrayRotation.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
